--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,7 +4,7 @@
 	signingkey = 8CA713D42039C32A
 [push]
 	default = simple
-[url "https://github.com/"]
+[url "git@github.com:"]
 	insteadOf = gh:
 [url "https://aur.archlinux.org/"]
 	insteadOf = aur:
