Launch i3 from xfce4-session instead of autostart

--- a/xfce4/.config/autostart/i3.desktop
+++ b/xfce4/.config/autostart/i3.desktop
@@ -9,5 +9,5 @@ X-GNOME-WMName=i3
 X-GNOME-Autostart-Phase=WindowManager
 X-GNOME-Provides=windowmanager
 X-GNOME-Autostart-Notify=false
-Hidden=false
+Hidden=true
 
