--- a/variety/.config/variety/variety.conf
+++ b/variety/.config/variety/variety.conf
@@ -5,19 +5,19 @@ change_on_start = False
 change_enabled = True
 
 # change_interval = <interval in seconds - not less than 5>
-change_interval = 120
+change_interval = 300
 
 # safe_mode = <True or False>
 safe_mode = False
 
 # download_enabled = <True or False>
-download_enabled = True
+download_enabled = False
 
 # download_interval = <interval in seconds - not less than 30>
 download_interval = 120
 
 # download_folder = <some folder> - when not specified, the default is ~/.config/variety/Downloaded
-download_folder = ~/pictures/downloaded
+download_folder = ~/.config/variety/Downloaded
 
 # Determine if there the download folder sould not exceed a certain size (in megabytes)
 # quota_enabled = <True or False>
@@ -26,7 +26,7 @@ quota_enabled = True
 quota_size = 2000
 
 # favorites_folder = <some folder> - when not specified, the default is ~/.config/variety/Favorites
-favorites_folder = ~/pictures/favorites
+favorites_folder = ~/.config/variety/Favorites
 
 # Prefer Copy to Favorites or Move to Favorites operation (or both), depending on the folder of the current image
 # favorites_operations = <A list of directories and the preferred operation (Copy, Move or Both) for each of them>
@@ -39,7 +39,7 @@ favorites_folder = ~/pictures/favorites
 favorites_operations = Downloaded:Copy;Fetched:Move;Others:Copy
 
 # fetch_folder = <some folder> - when not specified, the default is ~/.config/variety/Fetched
-fetched_folder = ~/pictures/fetched
+fetched_folder = ~/wallpapers
 
 # Clipboard monitoring settings
 # clipboard_enabled = <True or False>
@@ -90,8 +90,8 @@ stats_notice_shown = True
 # Are smart features enabled (i.e. data collection on Fav/Trash operations), also sync, and anonymous usage stats collection?
 # smart_enabled = <True or False>
 smart_enabled = False
-sync_enabled = True
-stats_enabled = True
+sync_enabled = False
+stats_enabled = False
 
 # Facebook - should we show the Share On Facebook item in menu and should we ask for a message every time
 # facebook_show_dialog = <True or False>
@@ -198,17 +198,14 @@ slideshow_pan = 0.05
 # Folders are included recursively
 # BE CAREFUL: all keys below (src1, src2, etc.) MUST be different
 [sources]
-src1 = True|favorites|The Favorites folder
+src1 = False|favorites|The Favorites folder
 src2 = True|fetched|The Fetched folder
-src3 = False|recommended|Recommended by Variety. Adapts to your taste as you mark images as favorite or trash.
-src4 = False|latest|Latest favorites by the other users of Variety. [May contain NSFW images]
-src5 = False|folder|/usr/share/backgrounds
-src6 = True|desktoppr|Random wallpapers from Desktoppr.co
-src7 = True|bing|Bing Photo of the Day
-src8 = True|unsplash|High-resolution photos from Unsplash.com
-src9 = True|apod|NASA's Astronomy Picture of the Day
-src10 = False|earth|World Sunlight Map - live wallpaper from Die.net
-src11 = True|flickr|user:www.flickr.com/photos/peter-levi/;user_id:93647178@N00;
+src3 = False|desktoppr|Random wallpapers from Desktoppr.co
+src4 = False|bing|Bing Photo of the Day
+src5 = False|unsplash|High-resolution photos from Unsplash.com
+src6 = False|apod|NASA's Astronomy Picture of the Day
+src7 = False|earth|World Sunlight Map - live wallpaper from Die.net
+src8 = False|flickr|user:www.flickr.com/photos/peter-levi/;user_id:93647178@N00;
 
 # Image filters to apply randomly to every wallpaper (ImageMagick is used for this)
 # Each filter is filterX = <enabled or not|filter name|arguments to pass to ImageMagick when calling convert>
